--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,20 +8,20 @@ body {
 }
 
 header {
-    background-color: mediumslateblue;
+    background-color: royalblue;
     grid-column: 1/6;
     margin-top: 0;
     text-align: center; 
 }
 
 main {
-    background-color: lightblue;
+    background-color: lightskyblue;
     grid-column: 2/6;
     grid-row: 2/3;
 }
 
 aside {
-    background-color: cadetblue;
+    background-color: cornflowerblue;
     grid-column: 1/2;
     grid-row: 2/3;
     padding: 0% 0% 65% 9%;
