Added media query to css for mobile layouts

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -79,3 +79,9 @@ img {
     top: 5em;
     left: 30em;
 }
+
+@media screen and (max-width:500px) {
+    body {
+        text-align: left; 
+    }
+}
